# tensorrt

tftrt/benchmarking-cpp/: main.cc
tftrt/examples-cpp/out-of-tree-example/: tf2_save_model.py
tftrt/examples-cpp/out-of-tree-example/tftrt-c/: CMakeLists.txt  main.c
tftrt/examples-cpp/out-of-tree-example/tftrt-cpp/: CMakeLists.txt  setup_environment.sh  tftrt_cpp_example.cpp  tftrt_nn_runner.cpp  tftrt_nn_runner.h
